--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@colmena/starter",
+  "name": "@beeman/module-todo",
   "version": "0.0.0",
   "description": "Colmena Starter Kit",
   "license": "MIT",
