--- a/modules/api-starter/package.json
+++ b/modules/api-starter/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@beeman/module-api-todo",
   "version": "0.0.1",
+  "private": false,
   "license": "MIT",
   "colmena": {
     "module": {
